--- a/Components/ShapesFlyoutPanel.xaml
+++ b/Components/ShapesFlyoutPanel.xaml
@@ -2,7 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:components="clr-namespace:LunaDraw.Components"
-             x:Class="LunaDraw.Components.ShapesFlyoutPanel">
+             xmlns:viewModels="clr-namespace:LunaDraw.Logic.ViewModels"
+             x:Class="LunaDraw.Components.ShapesFlyoutPanel"
+             x:DataType="viewModels:ToolbarViewModel">
   <Border Background="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray800}}"
           Padding="12"
           StrokeShape="RoundRectangle"
@@ -28,15 +30,15 @@
                   Stroke="Gray"
                   StrokeThickness="1"
                   Padding="8">
-              <Border.GestureRecognizers>
-                  <TapGestureRecognizer Command="{Binding SelectRectangleCommand}"/>
-              </Border.GestureRecognizers>
-              <components:ShapePreviewControl ShapeName="Rectangle"
-                                              StrokeColor="{Binding StrokeColor}"
-                                              FillColor="{Binding FillColor}"
-                                              StrokeWidth="{Binding StrokeWidth}"
-                                              HorizontalOptions="Fill"
-                                              VerticalOptions="Fill"/>
+            <Border.GestureRecognizers>
+              <TapGestureRecognizer Command="{Binding SelectRectangleCommand}"/>
+            </Border.GestureRecognizers>
+            <components:ShapePreviewControl ShapeName="Rectangle"
+                                            StrokeColor="{Binding StrokeColor}"
+                                            FillColor="{Binding FillColor}"
+                                            StrokeWidth="{Binding StrokeWidth}"
+                                            HorizontalOptions="Fill"
+                                            VerticalOptions="Fill"/>
           </Border>
           <Label Text="Rectangle"
                  FontSize="12"
@@ -51,15 +53,15 @@
                   Stroke="Gray"
                   StrokeThickness="1"
                   Padding="8">
-              <Border.GestureRecognizers>
-                  <TapGestureRecognizer Command="{Binding SelectCircleCommand}"/>
-              </Border.GestureRecognizers>
-              <components:ShapePreviewControl ShapeName="Circle"
-                                              StrokeColor="{Binding StrokeColor}"
-                                              FillColor="{Binding FillColor}"
-                                              StrokeWidth="{Binding StrokeWidth}"
-                                              HorizontalOptions="Fill"
-                                              VerticalOptions="Fill"/>
+            <Border.GestureRecognizers>
+              <TapGestureRecognizer Command="{Binding SelectCircleCommand}"/>
+            </Border.GestureRecognizers>
+            <components:ShapePreviewControl ShapeName="Circle"
+                                            StrokeColor="{Binding StrokeColor}"
+                                            FillColor="{Binding FillColor}"
+                                            StrokeWidth="{Binding StrokeWidth}"
+                                            HorizontalOptions="Fill"
+                                            VerticalOptions="Fill"/>
           </Border>
           <Label Text="Circle"
                  FontSize="12"
@@ -74,15 +76,15 @@
                   Stroke="Gray"
                   StrokeThickness="1"
                   Padding="8">
-              <Border.GestureRecognizers>
-                  <TapGestureRecognizer Command="{Binding SelectLineCommand}"/>
-              </Border.GestureRecognizers>
-              <components:ShapePreviewControl ShapeName="Line"
-                                              StrokeColor="{Binding StrokeColor}"
-                                              FillColor="{Binding FillColor}"
-                                              StrokeWidth="{Binding StrokeWidth}"
-                                              HorizontalOptions="Fill"
-                                              VerticalOptions="Fill"/>
+            <Border.GestureRecognizers>
+              <TapGestureRecognizer Command="{Binding SelectLineCommand}"/>
+            </Border.GestureRecognizers>
+            <components:ShapePreviewControl ShapeName="Line"
+                                            StrokeColor="{Binding StrokeColor}"
+                                            FillColor="{Binding FillColor}"
+                                            StrokeWidth="{Binding StrokeWidth}"
+                                            HorizontalOptions="Fill"
+                                            VerticalOptions="Fill"/>
           </Border>
           <Label Text="Line"
                  FontSize="12"
