--- a/Components/SettingsFlyoutPanel.xaml
+++ b/Components/SettingsFlyoutPanel.xaml
@@ -9,7 +9,8 @@
           Stroke="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}"
           StrokeThickness="1"
           MaximumHeightRequest="600">
-    <ScrollView VerticalScrollBarVisibility="Default">
+    <ScrollView VerticalScrollBarVisibility="Default"
+                Padding="0,0,25 ,0">
       <StackLayout Spacing="12">
         <Label Text="Brush Settings"
                FontAttributes="Bold"
@@ -103,7 +104,7 @@
                FontAttributes="Bold"/>
         <Slider x:Name="AngleJitterSlider"
                 Minimum="0"
-                Maximum="0.5"
+                Maximum="180"
                 ValueChanged="OnAngleJitterChanged"/>
 
         <Label Text="Hue Jitter"
